# cs421-parsec

./: cs421-parsec.cabal  my-parsec.hs  normal-parser-combinator.hs
app/: Main.hs
src/: MyParsec.hs
test/: Spec.hs  Tests.hs
