name:                cs421-parsec
version:             0.1.0.0
synopsis:            Write Parsec
license:             MIT
build-type:          Simple
cabal-version:       >=1.10

executable main
    hs-source-dirs:     app, src
    other-modules:      MyParsec
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    other-modules:      MyParsec, Spec , Tests
    hs-source-dirs:     src , test
    main-is:            Spec.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
    build-depends:      base , unordered-containers >= 0.2 , parsec
    build-depends:      base
                      , unordered-containers >= 0.2
                      , parsec
                      , test-framework
                      , test-framework-quickcheck2
                      , QuickCheck
